--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="max-h-screen min-h-min max-w-xs p-5 bg-gray-700 text-gray-200 my-1/2 flex flex-col justify-center items-center border-2 border-black rounded-lg">
         <img src="https://images.dog.ceo/breeds/newfoundland/n02111277_8856.jpg" class="max-h-1/3 rounded-lg dog-img" alt="dog_img">
         <h1 class="text-2xl font-bold m-5">Daddest Jokes</h1>
-        <p class="">When do doctors get angry? When they run out of patients.</p>
+        <p class="bg-slate-800 text-gray-200 p-4 rounded-lg font-bold">When do doctors get angry? When they run out of patients.</p>
         <button type="button" class="btn focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 m-5 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Hit me!</button>
     </div>
     
